# jupiter-pdf-qa-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  tools.py
